src/main/kotlin/com/example/database/input/web/error/StudentErrorResponse.kt
package com.example.database.input.web.error

data class StudentErrorResponse(
    val status: Int,
    val message: String,
    val timestamp: Long
)
